--- a/dds-parallel/init_cluster.cfg
+++ b/dds-parallel/init_cluster.cfg
@@ -1,7 +1,7 @@
 numnodes=2
-
+catalog.driver=com.ibm.db2.jcc.DB2Driver
 catalog.hostname=10.142.0.2:50001/mycatdb
-
+node1.driver=com.ibm.db2.jcc.DB2Driver
 node1.hostname=10.142.0.2:50002/mydb1
-
+node2.driver=com.ibm.db2.jcc.DB2Driver
 node2.hostname=10.142.0.2:50003/mydb2
