--- a/dds-parallel/cluster.cfg
+++ b/dds-parallel/cluster.cfg
@@ -1,12 +1,12 @@
 catalog.driver=com.ibm.db2.jcc.DB2Driver
 catalog.hostname=192.168.1.8:50001/mycatdb
 delimiter=,
-tablename=COURSES
-partition.method=notpartition
-partition.column=price
+tablename=MOVIES
+partition.method=hash
+partition.column=id
 
 partition.param1=2
-numnodes=1
+numnodes=2
 partition.node1.param1=1
 partition.node1.param2=10
 
