--- a/dds-parallel/gcloud_single.cfg
+++ b/dds-parallel/gcloud_single.cfg
@@ -3,7 +3,8 @@ catalog.hostname=10.142.0.4:50001/mycatdb
 delimiter=,
 tablename=MOVIES
 partition.method=hash
-partition.column=id
+
+partition.param1=2
 
 numnodes=1
 
