--- a/dds-parallel/gcloud_single.cfg
+++ b/dds-parallel/gcloud_single.cfg
@@ -3,8 +3,15 @@ catalog.hostname=10.142.0.4:50001/mycatdb
 delimiter=,
 tablename=MOVIES
 partition.method=hash
+partition.column=id
 
 partition.param1=1
+numnodes=1
+partition.node1.param1=1
+partition.node1.param2=10
+
+partition.node2.param1=10
+partition.node2.param2=20
 
 numnodes=1
 
