--- a/dds-parallel/gcloud_init_cluster.cfg
+++ b/dds-parallel/gcloud_init_cluster.cfg
@@ -1,4 +1,4 @@
-numnodes=2
+numnodes=3
 catalog.driver=com.ibm.db2.jcc.DB2Driver
 catalog.hostname=10.142.0.2:50001/mycatdb
 
@@ -7,3 +7,6 @@ node1.hostname=10.142.0.2:50002/mydb1
 
 node2.driver=com.ibm.db2.jcc.DB2Driver
 node2.hostname=10.142.0.3:50001/mydb2
+
+node3.driver=com.ibm.db2.jcc.DB2Driver
+node3.hostname=10.142.0.5:50001/mydb3
